primer version del sitio-modif

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 			</ul>
 		</div>
 		<div>
-			<img src="http//placehold.it/120x500">
+			<img src="http://placehold.it/120x500">
 		</div>
 		<div>
 			<ul>
